# bounty-matrix-inversion

./: LICENSE.txt  README.md  pyproject.toml
matrix_inversion/: QFloat.py  base_p_arrays.py  division.py  invert.py  main.py  matrix_invert.py  qf_invert.py  qfloat.py  qfloat_matrix_inversion.py
tests/: test_QFloat.py  test_QFloat_FHE.py  test_qfloat.py  test_qfloat_fhe.py
