[tool.poetry]
name = "matrix-inversion"
version = "0.1.0"
description = ""
authors = ["Lcressot <Lcressot@gmail.com>"]
readme = "README.md"
packages = [{include = "matrix_inversion"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
ipykernel = "^6.23.1"
scipy = "^1.11.0"
concrete-python = "2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
